Bug 40288 - constrain patron brief info in patron sidebar to parent width
The patron info in the patron / circ-menu sidebar is not constrained to it's
parent's width.  I found this with a very long email address, where the ul
grew to match the email address length, and the patron image container also
grew.  Both overflowed the sidebar.

Test plan:
1. find or make a patron with a very long email address (more tha 50 characters).
2. open the patron details page for that patron.  Observe the patron image and
   patron details overflows the patron sidebar (the email address will be hidden
   under the contact information panel.
3. Apply patch and rebuild css files.  It may be necessary to clear the
   browser cache.
4. open the patron details page for that patron again.  Observe the patron
   image and details does not overflow the patron sidebar.

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -1344,10 +1344,6 @@ dd {
 }
 
 .patroninfo-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: left;
     margin-left: 1rem;
 }
 
